// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User can use form to sign in when:  goes through failure flow 1`] = `
<DocumentFragment>
  <div
    class="box column empty"
    style="margin: auto; max-width: 320px;"
  >
    <div
      class="box-item-wrapper"
      style="margin-bottom: 32px;"
    >
      <h6
        class="font h6 default"
      >
        Sign in into your account
      </h6>
    </div>
    <div
      class="box-item-wrapper"
      style="margin-bottom: 12px;"
    >
      <div
        class="input"
      >
        <input
          data-i="sign-in-login-input"
          placeholder="Login*"
          value="tom19944"
        />
      </div>
    </div>
    <div
      class="box-item-wrapper"
      style="margin-bottom: 32px;"
    >
      <div
        class="input"
      >
        <input
          data-i="sign-in-password-input"
          placeholder="Password*"
          type="password"
          value="my-password-1994"
        />
      </div>
    </div>
    <div
      class="box-item-wrapper"
      style="margin-bottom: 32px;"
    >
      <button
        class="button size-3 rectangle filled primary"
        data-i="sign-in-confirm-btn"
      >
        Confirm
      </button>
    </div>
    <div
      class="box-item-wrapper"
    >
      <div
        class="alert error filled"
        data-i="sign-in-error-alert"
      >
        <p
          class="font b2 default"
        >
          Something went wrong...
        </p>
        <svg
          class="icon error-icon"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1.5 12C1.5 14.0767 2.11581 16.1068 3.26957 17.8335C4.42332 19.5602 6.0632 20.906 7.98182 21.7007C9.90045 22.4955 12.0116 22.7034 14.0484 22.2982C16.0852 21.8931 17.9562 20.8931 19.4246 19.4246C20.8931 17.9562 21.8931 16.0852 22.2982 14.0484C22.7034 12.0116 22.4955 9.90045 21.7007 7.98182C20.906 6.0632 19.5602 4.42332 17.8335 3.26957C16.1068 2.11581 14.0767 1.5 12 1.5C9.21523 1.5 6.54451 2.60625 4.57538 4.57538C2.60625 6.54451 1.5 9.21523 1.5 12ZM18.8625 17.8125L6.1875 5.1375C7.91298 3.70125 10.1129 2.96173 12.3556 3.0641C14.5983 3.16646 16.7218 4.10331 18.3092 5.69077C19.8967 7.27824 20.8335 9.40169 20.9359 11.6444C21.0383 13.8871 20.2988 16.087 18.8625 17.8125ZM6.18 18.87C4.36374 17.3276 3.23325 15.1279 3.03642 12.7533C2.83959 10.3787 3.59248 8.02286 5.13 6.2025L17.7975 18.87C16.1732 20.2425 14.1153 20.9955 11.9887 20.9955C9.86219 20.9955 7.80433 20.2425 6.18 18.87Z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`User can use form to sign in when:  goes through success flow 1`] = `
<DocumentFragment>
  <div
    class="box column empty"
    style="margin: auto; max-width: 320px;"
  >
    <div
      class="box-item-wrapper"
      style="margin-bottom: 32px;"
    >
      <h6
        class="font h6 default"
      >
        Sign in into your account
      </h6>
    </div>
    <div
      class="box-item-wrapper"
      style="margin-bottom: 12px;"
    >
      <div
        class="input"
      >
        <input
          data-i="sign-in-login-input"
          placeholder="Login*"
          value="tom19944"
        />
      </div>
    </div>
    <div
      class="box-item-wrapper"
      style="margin-bottom: 32px;"
    >
      <div
        class="input"
      >
        <input
          data-i="sign-in-password-input"
          placeholder="Password*"
          type="password"
          value="my-password-1994"
        />
      </div>
    </div>
    <div
      class="box-item-wrapper"
      style="margin-bottom: 32px;"
    >
      <button
        class="button size-3 rectangle filled primary"
        data-i="sign-in-confirm-btn"
      >
        Confirm
      </button>
    </div>
    <div
      class="box-item-wrapper"
    >
      <div
        class="alert ok filled"
        data-i="sign-in-ok-alert"
      >
        <p
          class="font b2 default"
        >
          You are logged in!
        </p>
        <svg
          class="icon success-icon"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.243 16.3139L6 12.0699L7.414 10.6559L10.243 13.4839L15.899 7.8269L17.314 9.2419L10.243 16.3119V16.3139Z"
          />
          <path
            clip-rule="evenodd"
            d="M1 12C1 5.925 5.925 1 12 1C18.075 1 23 5.925 23 12C23 18.075 18.075 23 12 23C5.925 23 1 18.075 1 12ZM12 21C10.8181 21 9.64778 20.7672 8.55585 20.3149C7.46392 19.8626 6.47177 19.1997 5.63604 18.364C4.80031 17.5282 4.13738 16.5361 3.68508 15.4442C3.23279 14.3522 3 13.1819 3 12C3 10.8181 3.23279 9.64778 3.68508 8.55585C4.13738 7.46392 4.80031 6.47177 5.63604 5.63604C6.47177 4.80031 7.46392 4.13738 8.55585 3.68508C9.64778 3.23279 10.8181 3 12 3C14.3869 3 16.6761 3.94821 18.364 5.63604C20.0518 7.32387 21 9.61305 21 12C21 14.3869 20.0518 16.6761 18.364 18.364C16.6761 20.0518 14.3869 21 12 21Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
